Fixed a spacing issue in the C++ method descriptions in Doxygen.

--- a/docs/src/css/libsbml-doxygen-stylesheet.css
+++ b/docs/src/css/libsbml-doxygen-stylesheet.css
@@ -416,6 +416,10 @@ table.memname {
     margin-bottom: 0px;
 }
 
+table.mlabels .mlabel {
+    margin-left: 5px;
+}
+
 /* @end */
 
 /* @group Member Details */
